--- a/version1/style2.css
+++ b/version1/style2.css
@@ -2,6 +2,10 @@
     font-family: gilroy;
     src: url(./resources/Gilroy-FREE/Gilroy-Light.otf);
 }
+@font-face{
+    font-family: boldgilroy;
+    src: url(./resources/Gilroy-FREE/Gilroy-ExtraBold.otf)
+}
 
 
 *{
@@ -13,11 +17,12 @@ html,body{
     height: 100%;
     width: 100%;
     font-family: gilroy;
+    background-color: #F9FAFB;
 }
  #main{
         width: 100%;
     height: 80%;
-        background-color: rgb(233, 244, 247);
+        background-color: #F9FAFB;
        
     }
 
@@ -46,7 +51,7 @@ color: black;
     justify-content: center;
     align-items: center;
     text-transform: capitalize;
-    background-color: rgb(233, 244, 247);
+    background-color: #F9FAFB;
     gap: 13px;
     text-align: center;
 }
@@ -59,13 +64,14 @@ input{
 #hero h1{
           font-size: 68px;
           font-weight: 900;
+          
 }
 #hero p{
           font-size: 18px;
           color: gray;
 }
 #blocks{
-    background-color: rgb(233, 244, 247);
+    background-color: #F9FAFB;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -80,6 +86,7 @@ input{
     justify-content: center;
     align-items: center;
     padding-left: 20px;
+    
     height: 98%;
     width: 280px;
     text-transform: capitalize;
@@ -106,15 +113,17 @@ input{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 12px;
+    gap: 16px;
 border-radius: 6px;
     text-transform: capitalize;
     padding-left: 25px;
-     background: linear-gradient(rgb(224, 238, 245),rgb(225, 233, 242),rgb(214, 227, 251));
+     background-color: #fff;
+     border: 1px solid black;
 }
 .c1 h2{
 font-size: 28px;
 font-weight: 800;
+
 }
 .c1 #in{
     font-size: 40px;
@@ -166,4 +175,11 @@ font-weight: 800;
     width: 200px;
     text-align: center;
     margin-left: 43%;
+   }
+   #btn:active{
+    scale: 0.95;
+   }
+   .c1:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.06);    
    }
