--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: gilroy;
-    src: url(./resources/Gilroy-FREE/Gilroy-Light.otf);
+    src: url(./resources/Gilroy-Light.otf);
 }
 @font-face{
     font-family: boldgilroy;
-    src: url(./resources/Gilroy-FREE/Gilroy-ExtraBold.otf)
+    src: url(./resources/Gilroy-ExtraBold.otf)
 }
 
 
