--- a/style2.css
+++ b/style2.css
@@ -18,11 +18,14 @@ html,body{
     width: 100%;
     font-family: gilroy;
     background-color: #F9FAFB;
+    background: url(https://i.pinimg.com/736x/67/a2/af/67a2af6017ac50a09da4721082abd376.jpg);
+    background-size: contain;
+    
 }
  #main{
         width: 100%;
     height: 80%;
-        background-color: #F9FAFB;
+       
        
     }
 
@@ -51,7 +54,8 @@ color: black;
     justify-content: center;
     align-items: center;
     text-transform: capitalize;
-    background-color: #F9FAFB;
+    
+   
     gap: 13px;
     text-align: center;
 }
@@ -71,7 +75,7 @@ input{
           color: gray;
 }
 #blocks{
-    background-color: #F9FAFB;
+    
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -132,7 +136,7 @@ font-weight: 800;
     width: 60px;
     text-align: center;
     border-radius: 15px;
-    color: rgb(91, 174, 251);
+    color: rgb(17, 21, 24);
 }
 .wrap{
     display: flex;
@@ -143,8 +147,8 @@ font-weight: 800;
     border: none;
 }
 #btn3{
-    border: 1px solid blue;
-    background-color: blue;
+    border: 1px solid rgb(74, 142, 251);
+    background-color: rgb(71, 156, 241);
     width: 285px;
     height: 28px;
     text-align: center;
@@ -186,3 +190,4 @@ font-weight: 800;
     transform: translateY(-3px);
     box-shadow: 0 6px 20px rgba(0,0,0,0.06);    
    }
+   
